Avalara Fullqa/src/Infer: Predictive Lead Scoring v3/objects/Infer_Scoring_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Specify the entities to score and set the rating&apos;s threshold and label.</description>
    <fields>
        <fullName>Enable_Account_Scoring__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, will enable triggers that implement account scoring.</description>
        <inlineHelpText>If selected, will enable triggers that implement account scoring.</inlineHelpText>
        <label>Enable Account Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Contact_Scoring__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, will enable triggers that implement contact scoring.</description>
        <inlineHelpText>If selected, will enable triggers that implement contact scoring.</inlineHelpText>
        <label>Enable Contact Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Lead_Scoring__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, will enable triggers that implement lead scoring.</description>
        <inlineHelpText>If selected, will enable triggers that implement lead scoring.</inlineHelpText>
        <label>Enable Lead Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Scoring__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, will enable triggers that implement opportunity scoring.</description>
        <inlineHelpText>If selected, will enable triggers that implement opportunity scoring.</inlineHelpText>
        <label>Enable Opportunity Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_Bucket_1_Label__c</fullName>
        <defaultValue>&quot;A (SET ME UP)&quot;</defaultValue>
        <label>Score Bucket 1 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Bucket_1_Threshold__c</fullName>
        <defaultValue>80</defaultValue>
        <label>Score Bucket 1 Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Bucket_2_Label__c</fullName>
        <defaultValue>&quot;B (SET ME UP)&quot;</defaultValue>
        <label>Score Bucket 2 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Bucket_2_Threshold__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Score Bucket 2 Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Bucket_3_Label__c</fullName>
        <defaultValue>&quot;C (SET ME UP)&quot;</defaultValue>
        <label>Score Bucket 3 Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Bucket_3_Threshold__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Score Bucket 3 Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Account_with_Score_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When we update the Infer Score, save a copy to the Score Snapshot field of the account. This option allows custom triggers or third-party systems to monitor account score changes in real time.</description>
        <inlineHelpText>When we update the Infer Score, save a copy to the Score Snapshot field of the account. This option allows custom triggers or third-party systems to monitor account score changes in real time.</inlineHelpText>
        <label>Update Account with Score Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Contact_with_Score_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When we update the Infer Score, save a copy to the Score Snapshot field of the contact. This option allows custom triggers or third-party systems to monitor contact score changes in real time.</description>
        <inlineHelpText>When we update the Infer Score, save a copy to the Score Snapshot field of the contact. This option allows custom triggers or third-party systems to monitor contact score changes in real time.</inlineHelpText>
        <label>Update Contact with Score Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Lead_With_Score_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When we update the Infer Score, save a copy to the Score Snapshot field of the lead. This option allows custom triggers or third-party systems to monitor lead score changes in real time.</description>
        <inlineHelpText>When we update the Infer Score, save a copy to the Score Snapshot field of the lead. This option allows custom triggers or third-party systems to monitor lead score changes in real time.</inlineHelpText>
        <label>Update Lead with Score Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Opportunity_with_Score_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When we update the Infer Score, save a copy to the Score Snapshot field of the opportunity. This option allows custom triggers or third-party systems to monitor opportunity score changes in real time.</description>
        <inlineHelpText>When we update the Infer Score, save a copy to the Score Snapshot field of the opportunity. This option allows custom triggers or third-party systems to monitor opportunity score changes in real time.</inlineHelpText>
        <label>Update Opportunity with Score Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Infer Scoring Settings</label>
</CustomObject>